[package]
name = "delta-core"
version = "0.1.0"
authors = ["nelsasser <elsanic96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arithmetic = { path = "../../nodes/arithmetic" }
delta-lib = { path = "../../lib/delta-lib"}