[package]
name = "arithmetic"
version = "0.1.0"
authors = ["nelsasser <elsanic96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delta-lib = { path="../../lib/delta-lib" }
delta-lib-macro = { path="../../lib/delta-lib-macro" }

[lib]
dylib=true